testcases/error/unevaluable_value_onehot_arg.veryl
module unevaluable_value_onehot_arg (
    d: input  logic<8>,
    q: output logic   ,
) {
    always_comb {
        q = $onehot(d);
    }
}
